yaml/workloadentry/annoymous_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labelselector
  namespace: envoy-test
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: tcp-labelselector
