yaml/workloadentry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: printenv
  namespace: istio-test
spec:
  selector:
    app: printenv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: tcp-printenv
